<resources>
    <string name="app_name">Minute Nick</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="separator">:</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
</resources>
